--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 body {
     background: #78909C;
     color: #EEEEEE;
+    font-family: 'Staatliches', cursive;
 }
 
 .header {
-    text-align: center;
-    margin-bottom: 50px;
-    font-size: 50px;
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 70px;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .wrapper {
@@ -14,18 +17,17 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 250px 250px;
-    grid-gap: 20px;
+    grid-gap: 10px;
     margin: 0 auto;
 }
 
-.maincontainer {
+.container {
     position: relative;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     background: transparent;
     perspective: 1000px;
-    margin: auto;
-    
+    margin: auto;    
 }
 
 .thecard {
@@ -34,7 +36,6 @@ body {
     height: 100%;
     transform-style: preserve-3d;
     transition: all 0.5s ease;
-    /* background: yellow; */
 }
 
 .thefront {
@@ -42,15 +43,10 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background: white;
-    color: white;
+    background: black;
     font-size: 100px;
     text-align: center;
 }
-
-/* .thefront {
-    z-index: 2;
-} */
 
 .theback {
     position: absolute;
