--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     background: black;
     font-size: 100px;
     text-align: center;
@@ -53,6 +54,7 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     color: white;
     font-size: 100px;
     transform: rotateY(180deg);
