--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,12 @@ body {
 .header {
     margin-top: 0px;
     text-align: center;
-    font-size: 40px;
-    border: 2px solid black;
+    font-size: 50px;
+    /* border: 2px solid black; */
+    line-height: 3em;
 }
 
 main {
-    position: relative;
-    top: 7em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(150px, auto);
@@ -30,7 +29,6 @@ main {
     width: 100%;
     height: 100%;
     perspective: 1000px;
-    border: 2px solid white;
 }
 
 .thecard, .thefront, .theback {
@@ -41,7 +39,6 @@ main {
 
 .thefront, .theback {
     backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
     text-align: center;
 }
 
@@ -52,7 +49,6 @@ main {
 
 .thefront {
     background: black;
-    font-size: 100px;
     z-index: 1;
 }
 
@@ -62,12 +58,36 @@ main {
     transform: rotateY(180deg);
 }
 
-.flipped {
-    transform: rotateY(180deg);
-}
-
 .info {
     position: relative;
     font-size: 20px;
     top: 62.5px;
+}
+
+@media only screen and (min-width: 768px) {
+    body {
+        /* padding: 50px; */
+    }
+
+    main {
+        width: 500px;
+        margin: 0 auto;
+    }
+
+    .header {
+        font-size: 60px;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .header {
+        text-align: center;
+        font-size: 100px;
+        
+    }
+    main {
+        width: 600px;
+        margin: 0 auto;
+        grid-auto-rows: minmax(200px, auto);
+    }
 }
