Changed line height for landscape display

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     text-align: center;
     font-size: 50px;
     /* border: 2px solid black; */
-    line-height: 3em;
+    /* line-height: 3em; */
 }
 
 main {
