Backface visibility webkit added

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ main {
 
 .thefront, .theback {
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     text-align: center;
 }
 
