--- a/styles.css
+++ b/styles.css
@@ -30,28 +30,29 @@ main {
     perspective: 1000px;
 }
 
-.thecard, .thefront, .theback {
+.card, .front, .back {
     position: absolute;
     width: 100%;
     height: 100%;
 }
 
-.thefront, .theback {
+.front, .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     text-align: center;
 }
 
-.thecard {
+.card {
     transform-style: preserve-3d;
     transition: all 0.5s ease;
+    cursor: pointer;
 }
 
-.thefront {
-    background: black;
+.front {
+    background: rgb(34, 32, 32);
 }
 
-.theback {
+.back {
     color: white;
     font-size: 50px;
     transform: rotateY(180deg);
@@ -62,6 +63,13 @@ main {
     font-size: 20px;
     top: 62.5px;
 }
+
+@media only screen and (min-width: 320px) {
+    main {
+        grid-auto-rows: minmax(100px, auto);
+    }
+}
+
 
 @media only screen and (min-width: 768px) {
     body {
