--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,8 @@ main {
     transform: rotateY(180deg);
 }
 
-.info {
-    position: relative;
-    font-size: 20px;
-    top: 62.5px;
+i {
+    margin-top: 20px;
 }
 
 @media only screen and (min-width: 320px) {
@@ -96,5 +94,9 @@ main {
         width: 600px;
         margin: 0 auto;
         grid-auto-rows: minmax(200px, auto);
+    }
+
+    i {
+        margin-top: 50px;
     }
 }
