--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     margin-top: 0px;
     text-align: center;
     font-size: 50px;
+    margin-bottom: 100px;
 }
 
 main {
@@ -63,17 +64,16 @@ i {
 }
 
 @media only screen and (min-width: 320px) {
+    header {
+        margin-bottom: 100px;
+    }
+
     main {
         grid-auto-rows: minmax(100px, auto);
     }
 }
 
-
 @media only screen and (min-width: 768px) {
-    body {
-        /* padding: 50px; */
-    }
-
     main {
         width: 500px;
         margin: 0 auto;
@@ -82,13 +82,20 @@ i {
     .header {
         font-size: 60px;
     }
+
+    header {
+        margin-bottom: 50px;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
+    header {
+        margin-bottom: 50px;
+    }
+
     .header {
         text-align: center;
         font-size: 100px;
-        
     }
     main {
         width: 600px;
